# bluetooth

./: CHANGELOG.md  Makefile.am  NOTICE  README  build.sh  configure.ac  cov_build.sh  project.yml
.github/workflows/: coverity_component_incremental_scan.yml  coverity_full_scan.yml  coverity_incremental_scan.yml  native_full_build.yml  unitTest.yml
include/: btrCore.h  btrCoreTypes.h  btrCore_avMedia.h  btrCore_le.h  btrCore_service.h
include/bt-ifce/: btrCore_bt_ifce.h
include/bt-ifce/gdbus/: gdbusBluez.h  gdbusFreedesktop.h
include/bt-ifce/gdbus/bleconfd/: deviceinfo.h  gatt.h
include/bt-ifce/gdbus/bluezAPI/: bluez-dbus.h  bluezAPICommon.h
include/bt-ifce/gdbus/bluezAPI/gatt/: serviceAdvertisement.h
include/bt-ifce/gdbus/bluezAPI/util/: adapterUtils.h  agentHelper.h  applicationHelper.h
include/bt-ifce/gdbus/dbusHelper/: dbusCommon.h  dbusUtil.h
include/logger/: btrCore_logger.h  btrCore_telemetry.h
include/safec/: safec_lib.h
include/telemetry/: bt-telemetry.h
specs/bluez5_54/: org.bluez_Adapter1.xml  org.bluez_AdvertisingManager1.xml  org.bluez_Agent1.xml  org.bluez_AgentManager1.xml  org.bluez_Device1.xml  org.bluez_GattCharacteristic1.xml  org.bluez_GattDescriptor1.xml  org.bluez_GattManager1.xml  org.bluez_GattProfile1.xml  org.bluez_GattService1.xml  org.bluez_LEAdvertisement1.xml  org.bluez_Media1.xml  org.bluez_NetworkManager1.xml
specs/dbus/: org.freedesktop.xml
src/: Makefile.am  bt-telemetry.c  btrCore.c  btrCore_avMedia.c  btrCore_le.c  btrCore_telemetry.c
src/bt-ifce/: Makefile.am  btrCore_dbus_bluez4.c  btrCore_dbus_bluez5.c  btrCore_gdbus_bluez5.c
src/bt-ifce/gdbus/: Makefile.am
src/bt-ifce/gdbus/bleconfd/: btr_leAdvGDBus.c  deviceinfo.c  gatt.c  setupservice.c
src/bt-ifce/gdbus/bluezAPI/gatt/: serviceAdvertisement.c
src/bt-ifce/gdbus/bluezAPI/util/: adapterUtils.c  agentHelper.c  applicationHelper.c
src/bt-ifce/gdbus/dbusHelper/: dbusUtil.c
src/bt-ifce/gdbus/platform/: btrCore_platform_dis_cb.c
tests/: Makefile.am  btrCore_test.c  btr_leAdvGDBusTest.c  btr_leAutoPairGDBusTest.c
unitTest/: mock_bt-telemetry.h  test_btrCore.c  test_btrCore_avMedia.c
unitTest/support/Untitled/: telemetry_busmessage_sender.h
